--- a/extra/b-custom_grads.ipynb
+++ b/extra/b-custom_grads.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,17 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x1: tensor([-0.0141, -2.2316,  0.0897], requires_grad=True)\n",
-      "x2: tensor([ 0.1969, -0.2429, -0.4893], requires_grad=True)\n",
-      " y: tensor([ 0.1828, -2.4745, -0.3997], grad_fn=<MyAddBackward>)\n",
-      " z: -0.8971386551856995, z.grad_fn: <MeanBackward0 object at 0x103338ee0>\n",
+      "x1: tensor([-1.3859, -1.2031,  0.6316], requires_grad=True)\n",
+      "x2: tensor([ 0.4127, -0.6214, -0.7899], requires_grad=True)\n",
+      " y: tensor([-0.9732, -1.8245, -0.1583], grad_fn=<MyAddBackward>)\n",
+      " z: -0.9853157997131348, z.grad_fn: <MeanBackward0 object at 0x7f5a65617850>\n",
       "x1.grad: tensor([0.3333, 0.3333, 0.3333])\n",
       "x2.grad: tensor([0.3333, 0.3333, 0.3333])\n"
      ]
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,18 +146,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " x: tensor([-1.7785,  0.6111,  0.1653, -0.8121], requires_grad=True)\n",
-      "x1: tensor([-1.7785,  0.6111,  0.1653, -0.8121], grad_fn=<MySplitBackward>)\n",
-      "x2: tensor([-1.7785,  0.6111,  0.1653, -0.8121], grad_fn=<MySplitBackward>)\n",
-      " y: tensor([-3.5571,  1.2221,  0.3305, -1.6241], grad_fn=<AddBackward0>)\n",
-      " z: -0.9071540236473083, z.grad_fn: <MeanBackward0 object at 0x1215816d0>\n",
+      " x: tensor([-0.1188, -1.3460,  2.1901, -0.9892], requires_grad=True)\n",
+      "x1: tensor([-0.1188, -1.3460,  2.1901, -0.9892], grad_fn=<MySplitBackward>)\n",
+      "x2: tensor([-0.1188, -1.3460,  2.1901, -0.9892], grad_fn=<MySplitBackward>)\n",
+      " y: tensor([-0.2377, -2.6919,  4.3802, -1.9784], grad_fn=<AddBackward0>)\n",
+      " z: -0.13194921612739563, z.grad_fn: <MeanBackward0 object at 0x7f5a64da9310>\n",
       "grad_x1: tensor([0.2500, 0.2500, 0.2500, 0.2500])\n",
       "grad_x2: tensor([0.2500, 0.2500, 0.2500, 0.2500])\n",
       " x.grad: tensor([0.5000, 0.5000, 0.5000, 0.5000])\n"
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -212,8 +212,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x: tensor([ 0.4467, -1.4328, -1.7784, -0.1107, -0.8490], requires_grad=True)\n",
-      "y: 0.4466537535190582, y.grad_fn: <torch.autograd.function.MyMaxBackward object at 0x1032c0ad0>\n",
+      "x: tensor([ 0.5503, -1.3510, -0.7761, -0.0242, -1.2477], requires_grad=True)\n",
+      "y: 0.5503321886062622, y.grad_fn: <torch.autograd.function.MyMaxBackward object at 0x7f59e55f3200>\n",
       "x.grad: tensor([1., 0., 0., 0., 0.])\n"
      ]
     }
@@ -228,13 +228,20 @@
     "y.backward()\n",
     "print(f'x.grad: {x.grad}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pDL] *",
+   "display_name": "Python [conda env:.conda-pDL] *",
    "language": "python",
-   "name": "conda-env-pDL-py"
+   "name": "conda-env-.conda-pDL-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -246,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
