--- a/15-transformer.ipynb
+++ b/15-transformer.ipynb
@@ -23,7 +23,9 @@
     "\n",
     "I changed a bit Alfredo's annotation to make it easier to represent and understand by me. In any case, they are minor changes and they are easy to identify.\n",
     "\n",
-    "The following explanations follow the structure of the video and slides. You can combine the sources to a better understanding."
+    "The following explanations follow the structure of the video and slides. You can combine the sources to a better understanding.\n",
+    "\n",
+    "*GitHub users: the matrixes and other mathematical formulation are not properly visualized in the GitHub's view. For a properly visualization please download the repository (to include images) and load the notebook with Jupiter notebook.* "
    ]
   },
   {
@@ -43,7 +45,7 @@
     " \n",
     "Each $x^{(i)}$  €  $\\mathbb{R}^n$  = \\{$x_1^{(i)}$, $x_2^{(i)}$, ..., $x_n^{(i)}$\\} , embedding of `n` features\n",
     "\n",
-    "![input-repres](./res/transformers_xinput_embbd.png)\n",
+    "![input-repres](res/transformers_xinput_embbd.png)\n",
     "\n",
     "If we concat the `t` examples together we get a matrix:\n",
     "\n",
@@ -67,7 +69,9 @@
     "\n",
     "$h = X*a$ &rarr; h € $\\mathbb{R}^{n}$\n",
     "\n",
-    "$ h = \n",
+    "\n",
+    "$ \n",
+    "h = \n",
     "\\begin{pmatrix}\n",
     "    x_1^{(1)} & x_1^{(2)} & x_1^{(3)} & ... & x_1^{(t)}\\\\\\ \n",
     "    x_2^{(1)} & x_2^{(2)} & x_2^{(3)} & ... & x_2^{(t)}\\\\\\ \n",
@@ -158,7 +162,7 @@
     "\n",
     "How `attention`, $a$, is calculated:\n",
     "\n",
-    "![attention_equation](./res/transformers_attention_eq.png)\n",
+    "![attention_equation](res/transformers_attention_eq.png)\n",
     "\n",
     "You can use:\n",
     "\n",
@@ -423,7 +427,7 @@
     "\n",
     "Now, if we apply this `key-value` paradigm to the `self-attention` process we have the equation: \n",
     "\n",
-    "![cross-attention](./res/transformers_cross_attention_eq.png)\n",
+    "![cross-attention](res/transformers_cross_attention_eq.png)\n",
     "\n",
     "As before, we can use:\n",
     "\n",
@@ -548,7 +552,7 @@
     "\n",
     "To parallelize the computation we can stick all the matrices in only one matrix:\n",
     "\n",
-    "![cross-attetion-imp](./res/transformers_cross_attention_implementation_eq.png)\n",
+    "![cross-attetion-imp](res/transformers_cross_attention_implementation_eq.png)\n",
     "\n",
     "This composed matrix is € $\\mathbb{R}^{2d+p}$\n",
     "\n",
@@ -748,7 +752,7 @@
     "\n",
     "This is the same architecture of `auto-encoders`:\n",
     "\n",
-    "![auto-encoder](./res/autoencoder.png)\n",
+    "![auto-encoder](res/autoencoder.png)\n",
     "\n",
     "In transformers we have something similar."
    ]
@@ -759,7 +763,7 @@
    "source": [
     "#### Transformer encoder\n",
     "\n",
-    "![transformer_encoder](./res/transformers_encoder.png)\n",
+    "![transformer_encoder](res/transformers_encoder.png)\n",
     "\n",
     "Where:\n",
     " - `self-attention` layer as we explained before.\n",
@@ -781,7 +785,7 @@
     "\n",
     "Decoder is similar to the decoder but it includes a new part between the `self-attention` and the `1-convolution` part, the `cross-attention` component.\n",
     "\n",
-    "![transformer_decoder](./res/transformers_decoder.png)\n",
+    "![transformer_decoder](res/transformers_decoder.png)\n",
     "\n",
     "The input ($x$) of the `cross-attention` for the keys ($k$) and values ($v$) is the hidden representation of the encoder:\n",
     "\n",
@@ -860,7 +864,7 @@
     "\n",
     "When we consider `h` heads. The output vector is the concatenation of the `h` matrixes/vectors of $q$, $k$ and $v$:\n",
     "\n",
-    "![cross-attetion-heads-imp](./res/transformers_cross_attention_imp_heads_eq.png)"
+    "![cross-attetion-heads-imp](res/transformers_cross_attention_imp_heads_eq.png)"
    ]
   },
   {
@@ -1150,7 +1154,7 @@
     "Now we have all components for our Transformer Encoder block shown below!!!!\n",
     "\n",
     "\n",
-    "![transformer_encoder](./res/transformers_encoder.png)"
+    "![transformer_encoder](res/transformers_encoder.png)"
    ]
   },
   {
@@ -1208,7 +1212,7 @@
     "\n",
     "As input we have a set of inputs $\\{x^{(i)}\\}_{i=1}^t = \\{x^{(1)},x^{(2)}, ... x^{(t)}\\}$, where $x^{(i)}$ € $\\mathbb{R}^{n}$\n",
     "\n",
-    "![input-repres](./res/transformers_xinput_embbd.png)\n",
+    "![input-repres](res/transformers_xinput_embbd.png)\n",
     "\n",
     "The transofmer encoder and attention are permutation equivariant. In other words, they don't use the order of the inputs as feature. You can change the order of the input set and the result is gonna be the same.\n",
     "\n",
